--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,33 +1,12 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>WebSocketクライアント</title>
 </head>
 
 <body>
-    <h1>Flaskでechoサーバー☆</h1>
-    <input type="text" id="msg" value="_(:3 」∠)_" />
-    <button id="sendBtn">send</button>
-    <ul id="rcv"></ul>
+    <div id="app"></div>
+    <script src="/static/js/app.js"></script>
 </body>
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<script>
-    $(function () {
-        var host = "ws://localhost:8000/";
-        var socket = new WebSocket(host);
-
-        socket.onmessage = function (message) {
-            $("#rcv").append("<li>" + message.data + "</li>")
-            console.log(message.data);
-        }
-
-        $("#sendBtn").on("click", function () {
-            message = $("#msg").val()
-            socket.send(message);
-        });
-    })
-</script>
-
 </html>
